--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
   "name": "pokemon",
   "version": "1.0.0",
-  "description": "Pokemon Card Display",
-  "main": "main.js",
+  "description": "This interactive game uses an API and allowed me to get more practice designing responsively.",
+  "main": "gulpfile.babel.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yxnely/pokemon-card-fun.git"
   },
   "author": "Yanely Ramirez",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yxnely/pokemon-card-fun/issues"
+  },
+  "homepage": "https://github.com/yxnely/pokemon-card-fun#readme",
   "devDependencies": {
-    "browser-sync": "^2.17.5",
-    "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-cache": "^0.4.5",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-sass": "^2.3.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-useref": "^3.1.2",
-    "run-sequence": "^1.2.2"
+    "@babel/core": "^7.13.1",
+    "@babel/preset-env": "^7.13.5",
+    "@babel/register": "^7.13.0",
+    "del": "^6.0.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-less": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-uglify": "^3.0.2"
   }
 }
